# algae

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml
algae/: either.py  option.py  try_.py
pyfunds/: either.py  option.py  try_.py
tests/: test_either.py  test_option.py  test_try_.py
