[tool.poetry]
name = "pyfunds"
version = "1.0.0"
description = "Python Functional Data Structures"
authors = ["Luca Ruzzola <lucaruzzola@gmail.com>"]
readme = 'README.md'
keywords = ['python', 'functional', 'programming', 'data', 'structures']
repository = 'https://github.com/lucaruzzola/pyfunds'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
isort = "^5.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"