[tool.poetry]
name = "algae"
version = "1.1.0"
description = "Algebraic Data Types for Python"
authors = ["Luca Ruzzola <lucaruzzola@gmail.com>"]
readme = 'README.md'
keywords = ['python', 'ADT', 'algebraic', 'types', 'functional', 'programming', 'data', 'structures']
repository = 'https://github.com/lucaruzzola/algae'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3"
isort = "^5.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
